--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
          <h1>Haz un </h1><img src="img/logo.png">
       </div>
     </div>
-     <fieldset class="section-1">
+   <fieldset class="section-1">
       <div class="containers">
 
         <div class="container-img">
@@ -111,33 +111,45 @@
           <input type="button" name="next" class="next action-button" value="Continuar" />
     </fieldset>
      <fieldset id="section-4">
-     <div class="containers">
-        <div class="container-img">
-        <img src="img/ilustracion-1.png" class="img-fluid"> 
-        </div>
-        <div class="container-form">
-          <div class="form-4">
-            <p class="paso">Paso <span>4 de 17</span></p>
-            <h2>¿Cuantos dormitorios tiene la casa?</h2>
-            <span class="span">Seleccione el número de dormitoriocon los que cuente su propiedad </span>
-            <div class="buttons-numer">
-              <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-                <div class="btn-group mr-2" role="group" aria-label="First group">
-                  <button type="button" class="btn btn-secondary">1</button>
-                  <button type="button" class="btn btn-secondary button-active">2</button>
-                  <button type="button" class="btn btn-secondary">3</button>
-                  <button type="button" class="btn btn-secondary">4</button>
-                  <button type="button" class="btn btn-secondary">5</button>
-                  <button type="button" class="btn btn-secondary">6</button>
+            <div class="containers">
+
+              <div class="container-img">
+              <img src="img/ilustracion-1.png" class="img-fluid"> 
+              </div>
+              <div class="container-form">
+                <div class="form-4">
+                  <p class="paso">Paso <span>4 de 17</span></p>
+                  <h2>¿Cuantos dormitorios tiene la casa?</h2>
+                  <span class="span">Seleccione el número de dormitoriocon los que cuente su propiedad </span>
+                  <div class="option-años">
+                    <ul class=" nav-pills mb-3" id="pills-tab" role="tablist">
+                        <li class="nav-item" role="presentation">
+                          <a class="nav-link " id="pills-home-tab" data-toggle="pill"    aria-selected="true">1</a>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                          <a class="nav-link active" id="pills-profile-tab" data-toggle="pill"   aria-selected="false">2</a>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                          <a class="nav-link " id="pills-contact-tab" data-toggle="pill"   aria-selected="false">3</a>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                          <a class="nav-link" id="pills-contact-tab" data-toggle="pill"   aria-selected="false">4</a>
+                        </li> 
+                        <li class="nav-item" role="presentation">
+                          <a class="nav-link" id="pills-contact-tab" data-toggle="pill"   aria-selected="false">5</a>
+                        </li> 
+                        <div class="siguiente pt-2">
+                          <a href=""> <img src="img/svg/next.svg"> </a>
+                        </div>                              
+                      </ul>
+
+                  </div>
                 </div>
               </div>
-            </div>
-          </div>
-        </div>
 
-      </div>
-         <input type="button" name="previous" class="previous action-button" value="Átras" />
-          <input type="button" name="next" class="next action-button" value="Continuar" />
+            </div>
+               <input type="button" name="previous" class="previous action-button" value="Átras" />
+                <input type="button" name="next" class="next action-button" value="Continuar" /> 
     </fieldset> 
      <fieldset id="section-5">
          <div class="containers">
@@ -173,28 +185,47 @@
           </div>
          <input type="button" name="previous" class="previous action-button" value="Átras" />
           <input type="button" name="next" class="next action-button" value="Continuar" />
-    </fieldset>
-        <fieldset>
-     <div class="containers">
+    </fieldset> 
+        <fieldset id="section-6">
+            <div class="containers">
 
-        <div class="container-img">
-        <img src="img/ilustracion-1.png" class="img-fluid"> 
-        </div>
-        <div class="container-form">
-          <div class="form ">
-            <p>Paso <span>6 de 17</span></p>
-            <h2>¿De qué tipo de vivienda se trata?</h2>
-            <span class="span">Encuentra tu localidad</span>
-            <div class="search">
-              <label><img src="img/svg/search.svg"></label>
-             <input type="search" class="input-search" name="search" placeholder="Busca...">
+              <div class="container-img">
+              <img src="img/ilustracion-1.png" class="img-fluid"> 
+              </div>
+              <div class="container-form">
+                <div class="form ">
+                  <p>Paso <span>6 de 17</span></p>
+                  <h2>¿En qué año se contruyo el edificio?</h2>
+                  <span class="span">Introduce una fecha aproximada si no estas seguro</span>
+                  <div class="option-años">
+                    <ul class=" nav-pills mb-3" id="pills-tab" role="tablist">
+                        <li class="nav-item" role="presentation">
+                          <a class="nav-link " id="pills-home-tab" data-toggle="pill"    aria-selected="true">1</a>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                          <a class="nav-link active" id="pills-profile-tab" data-toggle="pill"   aria-selected="false">2</a>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                          <a class="nav-link " id="pills-contact-tab" data-toggle="pill"   aria-selected="false">3</a>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                          <a class="nav-link" id="pills-contact-tab" data-toggle="pill"   aria-selected="false">4</a>
+                        </li> 
+                        <li class="nav-item" role="presentation">
+                          <a class="nav-link" id="pills-contact-tab" data-toggle="pill"   aria-selected="false">5</a>
+                        </li> 
+                        <div class="siguiente pt-2">
+                          <a href=""> <img src="img/svg/next.svg"> </a>
+                        </div>                              
+                      </ul>
+
+                  </div>
+                </div>
+              </div>
+
             </div>
-          </div>
-        </div>
-
-      </div>
-         <input type="button" name="previous" class="previous action-button" value="Átras" />
-          <input type="button" name="next" class="next action-button" value="Continuar" />
+               <input type="button" name="previous" class="previous action-button" value="Átras" />
+                <input type="button" name="next" class="next action-button" value="Continuar" /> 
     </fieldset>
         <fieldset>
      <div class="containers">
@@ -218,25 +249,68 @@
          <input type="button" name="previous" class="previous action-button" value="Átras" />
           <input type="button" name="next" class="next action-button" value="Continuar" />
     </fieldset>
-        <fieldset>
-     <div class="containers">
-
-        <div class="container-img">
-        <img src="img/ilustracion-1.png" class="img-fluid"> 
-        </div>
-        <div class="container-form">
-          <div class="form ">
-            <p>Paso <span>8 de 17</span></p>
-            <h2>¿De qué tipo de vivienda se trata?</h2>
-            <span class="span">Encuentra tu localidad</span>
-            <div class="search">
-              <label><img src="img/svg/search.svg"></label>
-             <input type="search" class="input-search" name="search" placeholder="Busca...">
+        <fieldset id="section-8">
+         <div class="containers">
+            <div class="container-img">
+            <img src="img/ilustracion-1.png" class="img-fluid"> 
             </div>
-          </div>
-        </div>
+            <div class="container-form">
+              <div class="form-8">
+                <p class="paso">Paso <span>8 de 17</span></p>
+                <h2>¿En qué planta se escuentra tu vivienda?</h2>
+                <span class="span">Selecciona el piso en donde se encuentre su casa</span>
+                  <div class="option-años">
+                    <ul class=" nav-pills mb-3" id="pills-tab" role="tablist">
+                        <li class="nav-item" role="presentation">
+                          <a class="nav-link " id="pills-home-tab" data-toggle="pill"    aria-selected="true">1</a>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                          <a class="nav-link active" id="pills-profile-tab" data-toggle="pill"   aria-selected="false">2</a>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                          <a class="nav-link " id="pills-contact-tab" data-toggle="pill"   aria-selected="false">3</a>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                          <a class="nav-link" id="pills-contact-tab" data-toggle="pill"   aria-selected="false">4</a>
+                        </li> 
+                        <li class="nav-item" role="presentation">
+                          <a class="nav-link" id="pills-contact-tab" data-toggle="pill"   aria-selected="false">5</a>
+                        </li> 
+                        <div class="siguiente pt-2">
+                          <a href=""> <img src="img/svg/next.svg"> </a>
+                        </div>                              
+                      </ul>
 
-      </div>
+                  </div>
+                <h2 class="mt-5">¿Cuántas en total tiene el edificio?</h2>
+                <span class="span">Selecciona cuantos pisos tiene en total el edificio</span>
+                  <div class="option-años">
+                    <ul class=" nav-pills mb-3" id="pills-tab" role="tablist">
+                        <li class="nav-item" role="presentation">
+                          <a class="nav-link " id="pills-home-tab" data-toggle="pill"    aria-selected="true">1</a>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                          <a class="nav-link active" id="pills-profile-tab" data-toggle="pill"   aria-selected="false">2</a>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                          <a class="nav-link " id="pills-contact-tab" data-toggle="pill"   aria-selected="false">3</a>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                          <a class="nav-link" id="pills-contact-tab" data-toggle="pill"   aria-selected="false">4</a>
+                        </li> 
+                        <li class="nav-item" role="presentation">
+                          <a class="nav-link" id="pills-contact-tab" data-toggle="pill"   aria-selected="false">5</a>
+                        </li> 
+                        <div class="siguiente pt-2">
+                          <a href=""> <img src="img/svg/next.svg"> </a>
+                        </div>                              
+                      </ul>
+
+                  </div>                  
+              </div>
+            </div>
+
+          </div>
          <input type="button" name="previous" class="previous action-button" value="Átras" />
           <input type="button" name="next" class="next action-button" value="Continuar" />
     </fieldset>
@@ -269,25 +343,42 @@
          <input type="button" name="previous" class="previous action-button" value="Átras" />
           <input type="button" name="next" class="next action-button" value="Continuar" />
     </fieldset>
-        <fieldset>
-     <div class="containers">
-
-        <div class="container-img">
-        <img src="img/ilustracion-1.png" class="img-fluid"> 
-        </div>
-        <div class="container-form">
-          <div class="form ">
-            <p>Paso <span>10 de 17</span></p>
-            <h2>¿De qué tipo de vivienda se trata?</h2>
-            <span class="span">Encuentra tu localidad</span>
-            <div class="search">
-              <label><img src="img/svg/search.svg"></label>
-             <input type="search" class="input-search" name="search" placeholder="Busca...">
+        <fieldset id="section-10">
+         <div class="containers">
+            <div class="container-img">
+            <img src="img/ilustracion-1.png" class="img-fluid"> 
             </div>
-          </div>
-        </div>
+            <div class="container-form">
+              <div class="form-10">
+                <p class="paso">Paso <span>10 de 17</span></p>
+                <h2>¿Cuantos baños en total tiene el edificio?</h2>
+                <span class="span">Baños completos o aseos</span>
+                <div class="option-años">
+                  <ul class=" nav-pills mb-3" id="pills-tab" role="tablist">
+                      <li class="nav-item" role="presentation">
+                        <a class="nav-link " id="pills-home-tab" data-toggle="pill"    aria-selected="true">1</a>
+                      </li>
+                      <li class="nav-item" role="presentation">
+                        <a class="nav-link active" id="pills-profile-tab" data-toggle="pill"   aria-selected="false">2</a>
+                      </li>
+                      <li class="nav-item" role="presentation">
+                        <a class="nav-link " id="pills-contact-tab" data-toggle="pill"   aria-selected="false">3</a>
+                      </li>
+                      <li class="nav-item" role="presentation">
+                        <a class="nav-link" id="pills-contact-tab" data-toggle="pill"   aria-selected="false">4</a>
+                      </li> 
+                      <li class="nav-item" role="presentation">
+                        <a class="nav-link" id="pills-contact-tab" data-toggle="pill"   aria-selected="false">5</a>
+                      </li> 
+                      <div class="siguiente pt-2">
+                        <a href=""> <img src="img/svg/next.svg"> </a>
+                      </div>                              
+                    </ul>
+                </div>
+              </div>
+            </div>
 
-      </div>
+          </div>
          <input type="button" name="previous" class="previous action-button" value="Átras" />
           <input type="button" name="next" class="next action-button" value="Continuar" />
     </fieldset>
@@ -322,26 +413,55 @@
           </div>
          <input type="button" name="previous" class="previous action-button" value="Átras" />
           <input type="button" name="next" class="next action-button" value="Continuar" />
-        </fieldset>
-        <fieldset>
-     <div class="containers">
+        </fieldset> 
+        <fieldset id="section-12">
+         <div class="containers">
 
-        <div class="container-img">
-        <img src="img/ilustracion-1.png" class="img-fluid"> 
-        </div>
-        <div class="container-form">
-          <div class="form-12">
-            <p>Paso <span>12 de 17</span></p>
-            <h2>¿Qué certificación energética tiene tu casa?</h2>
-            <div class="search">
-
+            <div class="container-img">
+            <img src="img/ilustracion-1.png" class="img-fluid"> 
             </div>
-            <h2>¿Qué es la clasificación energética?</h2>
-            <span class="span">El certificado recoge las características energéticas que tiene la vivienda y la clasifica de la A+ a la G en función de su eficiencia, consumo y emisiones de CO2, entre otros.</span>            
-          </div>
-        </div>
+            <div class="container-form">
+              <div class="form-12">
+                <p>Paso <span>12 de 17</span></p>
+                <h2>¿Qué certificación energética tiene tu casa?</h2>
+                    <div class="option-años">
+                      <ul class=" nav-pills mb-3" id="pills-tab" role="tablist">
+                          <li class="nav-item" role="presentation">
+                            <a class="nav-link " id="pills-home-tab" data-toggle="pill"    aria-selected="true">A</a>
+                          </li>
+                          <li class="nav-item" role="presentation">
+                            <a class="nav-link active" id="pills-profile-tab" data-toggle="pill"   aria-selected="false">B</a>
+                          </li>
+                          <li class="nav-item" role="presentation">
+                            <a class="nav-link " id="pills-contact-tab" data-toggle="pill"   aria-selected="false">C</a>
+                          </li>
+                          <li class="nav-item" role="presentation">
+                            <a class="nav-link" id="pills-contact-tab" data-toggle="pill"   aria-selected="false">D</a>
+                          </li> 
+                          <li class="nav-item" role="presentation">
+                            <a class="nav-link" id="pills-contact-tab" data-toggle="pill"   aria-selected="false">E</a>
+                          </li> 
+                          <div class="siguiente pt-2">
+                            <a href=""> <img src="img/svg/next.svg"> </a>
+                          </div>                              
+                        </ul>
+                    </div>
+                    <div class="clasificado">
+                      <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+                        <li class="cla-1 Clasificado1 is-active">
+                          <a class="">No clasificable</a>
+                       </li>                                
+                        <li class="cla-2 Clasificado2">
+                          <a class="">No sé</a>
+                        </li>                                                                
+                      </ul>
+                    </div>
+                <h2>¿Qué es la clasificación energética?</h2>
+                <span class="span">El certificado recoge las características energéticas que tiene la vivienda y la clasifica de la A+ a la G en función de su eficiencia, consumo y emisiones de CO2, entre otros.</span>            
+              </div>
+            </div>
 
-      </div>
+          </div>
      <input type="button" name="previous" class="previous action-button" value="Átras" />
       <input type="button" name="next" class="next action-button" value="Continuar" />
     </fieldset>
@@ -517,9 +637,9 @@
         </div>
 
       </div>
-<!--       <input type="button" name="previous" class="previous action-button" value="Previous" /> -->
-     <!-- <input type="button" name="next" class="next action-button" value="Obtener mi oferta" />
-    </fieldset> -->
+       <!-- <input type="button" name="previous" class="previous action-button" value="Previous" />  -->
+     <input type="button" name="next" class="next action-button" value="Obtener mi oferta" />
+    </fieldset> 
 </form>
 </div>
 
