--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
          <h1>Haz un </h1><img src="img/logo.png">
       </div>
     </div>
-   <fieldset class="section-1">
+ <!--   <fieldset class="section-1">
       <div class="containers">
 
         <div class="container-img">
@@ -226,7 +226,7 @@
             </div>
                <input type="button" name="previous" class="previous action-button" value="Átras" />
                 <input type="button" name="next" class="next action-button" value="Continuar" /> 
-    </fieldset>
+    </fieldset> -->
         <fieldset>
      <div class="containers">
 
@@ -236,11 +236,16 @@
         <div class="container-form">
           <div class="form ">
             <p>Paso <span>7 de 17</span></p>
-            <h2>¿De qué tipo de vivienda se trata?</h2>
-            <span class="span">Encuentra tu localidad</span>
-            <div class="search">
-              <label><img src="img/svg/search.svg"></label>
-             <input type="search" class="input-search" name="search" placeholder="Busca...">
+            <h2>¿Qué tamaño tiene?</h2>
+            <span class="span">Introduce la superficie útil en metros cuadrados</span>
+            <div class="S">
+            <div class="form-group">
+              <label for="exampleFormControlSelect1"></label>
+              <select class="form-control" id="exampleFormControlSelect1">
+                <option>Metros</option>
+                <option>2</option>
+              </select>
+            </div>
             </div>
           </div>
         </div>
@@ -642,15 +647,15 @@
     </fieldset> 
 </form>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.min.js'></script>
-      <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js'></script>
+
+<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.min.js'></script>
+      <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js'></script>
 <script src="js/wizard.js"></script>
 
 
 
 
-
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
   </body>
 </html>
