--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
-    <title>Hello, world!</title>
+    <title>Viflip</title>
   </head>
 
   <body style="background-color: #f9f9f9;">
@@ -31,7 +31,7 @@
           <ul>
             <li><a href="" class="active">INICIO</a></li>
             <li><a href="">QUÉ HACEMOS</a></li>
-            <li><a href="">HAZ UN VIFLIP</a></li>
+            <li><a href="formulario.html">HAZ UN VIFLIP</a></li>
             <li><a href="">CONTÁCTENOS</a></li>
           </ul>
         </nav>
@@ -47,7 +47,7 @@
 <section class="">
   <div class="banner container text-center py-5">
     <div class="col-12">
-      <img src="img/banner-home.png" class="img-fluid">
+      <img src="img/svg/banner.svg" class="img-fluid">
     </div>
       <div class="banner-numer">
           <div class="banner-cont-numer">
@@ -111,13 +111,13 @@
                  </div>
                </div>
                <div class="col-12 left-cont">
-                 <div class="contenedor" style="background-color: #ffffff;border-radius: 8px;width: 424px;height: 162px;margin: 0px auto 0px 73px;">
+                 <div class="contenedor" style="">
                    <div class="icon ganancia">
                       <img src="img/svg/ganancia.svg"> 
                    </div>
                    <div class="info">
                      <h3>Mayor ganancia</h3>
-                     <p>Aumenta tus ganancias y  multiplica el valor <br> de tu propiedad</p>                     
+                     <p>Aumenta tus ganancias y  multiplica el <br> valor  de tu propiedad</p>                     
                    </div>
                  </div>                 
                </div>
@@ -128,7 +128,7 @@
                    </div>
                    <div class="info">
                      <h3>Regalos</h3>
-                     <p>Con tus ganacias multiplicadas compra ese <br> regalo que siempre quisiste dar</p>                     
+                     <p>Con tus ganacias multiplicadas compra <br> ese  regalo que siempre quisiste dar</p>                     
                    </div>
                  </div>                 
                </div>
@@ -170,9 +170,8 @@
 </section>
 
 <section class="section3 pt-4">
-  <div class="container">
- 
-    <div class="col-12 pt-4 text-center title-valor">
+  <div class="container"> 
+    <div class="col-12 py-4 text-center title-valor">
       <h3>¿Cuanto crees que vale tu casa? </h3>
       <p>Aumenta el valor de tu casa y gana mucho más por la venta <br> de tu casa, haz un VIFLIP</p>
     </div>
@@ -198,15 +197,12 @@
     <div class="row py-5">
         <div class="col-lg-4 info-web">
           <img src="img/logo-footer.png">
-
           <p>info@yourname.com</p>
           <p>(561) 798-6407 / (954) 771-8522</p>
-
           <ul>
             <li><img src="img/svg/facebook.svg"></li>
             <li><img src="img/svg/instagram.svg"></li>
           </ul>
-
           <span>® 2020 All rights reserved. your name</span>
         </div>
         <div class="col-lg-4 options-list mt-4 pt-2">
