--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 </style>
     <title>.::WORK::.</title>
   </head>
-  <body>
+  <body style="background:#FCFCF5;">
 <div class="fondo" style="height: 100vh;
-    background:#FCFCF5;
+    margin: auto;
     display: flex;
-    max-width: 100%;">
+    max-width: 1140px;">
 
-  <form id="msform">
+  <form id="msform" class="row"> 
   <!-- progressbar -->
   <ul id="progressbar">
     <li class="active">Account Setup</li>
@@ -32,11 +32,11 @@
          <h1>Haz un </h1><img src="img/logo.png">
       </div>
     </div>
- <!--   <fieldset class="section-1">
+    <fieldset class="section-1">
       <div class="containers">
 
         <div class="container-img">
-         <img src="img/ilustracion-1.png" class="img-fluid"> 
+         <img src="img/svg-formulario/seccion-1.svg" class="img-fluid"> 
         </div>
           <div class="container-form">
             <div class="form ">
@@ -61,7 +61,7 @@
      <div class="containers">
 
         <div class="container-img">
-          <img src="img/ilustracion-1.png" class="img-fluid"> 
+          <img src="img/svg-formulario/seccion-2.svg" class="img-fluid"> 
         </div>
         <div class="container-form">
           <div class="form-2 ">
@@ -87,7 +87,7 @@
     <fieldset id="section-3">
      <div class="containers">
         <div class="container-img">
-        <img src="img/ilustracion-1.png" class="img-fluid"> 
+        <img src="img/svg-formulario/seccion-1.svg" class="img-fluid">
         </div>
         <div class="container-form">
           <div class="form-3">
@@ -114,7 +114,7 @@
             <div class="containers">
 
               <div class="container-img">
-              <img src="img/ilustracion-1.png" class="img-fluid"> 
+              <img src="img/svg-formulario/seccion-1.svg" class="img-fluid">
               </div>
               <div class="container-form">
                 <div class="form-4">
@@ -154,7 +154,7 @@
      <fieldset id="section-5">
          <div class="containers">
             <div class="container-img">
-            <img src="img/ilustracion-1.png" class="img-fluid"> 
+            <img src="img/svg-formulario/seccion-1.svg" class="img-fluid">
             </div>
             <div class="container-form">
               <div class="form-5">
@@ -190,7 +190,7 @@
             <div class="containers">
 
               <div class="container-img">
-              <img src="img/ilustracion-1.png" class="img-fluid"> 
+              <img src="img/svg-formulario/seccion-1.svg" class="img-fluid">
               </div>
               <div class="container-form">
                 <div class="form ">
@@ -226,12 +226,12 @@
             </div>
                <input type="button" name="previous" class="previous action-button" value="Átras" />
                 <input type="button" name="next" class="next action-button" value="Continuar" /> 
-    </fieldset> -->
+    </fieldset> 
         <fieldset>
      <div class="containers">
 
         <div class="container-img">
-        <img src="img/ilustracion-1.png" class="img-fluid"> 
+        <img src="img/svg-formulario/seccion-1.svg" class="img-fluid">
         </div>
         <div class="container-form">
           <div class="form ">
@@ -257,7 +257,7 @@
         <fieldset id="section-8">
          <div class="containers">
             <div class="container-img">
-            <img src="img/ilustracion-1.png" class="img-fluid"> 
+            <img src="img/svg-formulario/seccion-1.svg" class="img-fluid">
             </div>
             <div class="container-form">
               <div class="form-8">
@@ -322,7 +322,7 @@
         <fieldset id="section-9">
          <div class="containers">
             <div class="container-img">
-            <img src="img/ilustracion-1.png" class="img-fluid"> 
+            <img src="img/svg-formulario/seccion-1.svg" class="img-fluid">
             </div>
             <div class="container-form">
               <div class="form-9">
@@ -351,7 +351,7 @@
         <fieldset id="section-10">
          <div class="containers">
             <div class="container-img">
-            <img src="img/ilustracion-1.png" class="img-fluid"> 
+            <img src="img/svg-formulario/seccion-1.svg" class="img-fluid">
             </div>
             <div class="container-form">
               <div class="form-10">
@@ -391,7 +391,7 @@
          <div class="containers">
           
             <div class="container-img">
-            <img src="img/ilustracion-1.png" class="img-fluid"> 
+            <img src="img/svg-formulario/seccion-1.svg" class="img-fluid">
             </div>
             <div class="container-form">
               <div class="form-11">
@@ -423,7 +423,7 @@
          <div class="containers">
 
             <div class="container-img">
-            <img src="img/ilustracion-1.png" class="img-fluid"> 
+            <img src="img/svg-formulario/seccion-1.svg" class="img-fluid">
             </div>
             <div class="container-form">
               <div class="form-12">
@@ -474,7 +474,7 @@
      <div class="containers">
  
         <div class="container-img">
-        <img src="img/ilustracion-1.png" class="img-fluid"> 
+        <img src="img/svg-formulario/seccion-1.svg" class="img-fluid">
         </div>
         <div class="container-form">
           <div class="form-13">
@@ -513,7 +513,7 @@
 
       </style>
         <div class="container-img">
-        <img src="img/ilustracion-1.png" class="img-fluid"> 
+        <img src="img/svg-formulario/seccion-1.svg" class="img-fluid">
         </div>
         <div class="container-form">
           <div class="form-14">
@@ -544,7 +544,7 @@
       <fieldset id="section-15">
      <div class="containers">
         <div class="container-img">
-        <img src="img/ilustracion-1.png" class="img-fluid"> 
+        <img src="img/svg-formulario/seccion-1.svg" class="img-fluid">
         </div>
         <div class="container-form">
           <div class="form-15">
@@ -585,7 +585,7 @@
      <div class="containers">
  
         <div class="container-img">
-       <img src="img/ilustracion-1.png" class="img-fluid"> 
+       <img src="img/svg-formulario/seccion-1.svg" class="img-fluid">
         </div>
         <div class="container-form">
           <div class="form-16">
@@ -625,7 +625,7 @@
 
 </style>
         <div class="container-img">
-        <img src="img/ilustracion-1.png" class="img-fluid"> 
+        <img src="img/svg-formulario/seccion-1.svg" class="img-fluid">
         </div>
         <div class="container-form">
           <div class="form-17">
@@ -648,8 +648,8 @@
 </form>
 </div>
 
-<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.min.js'></script>
-      <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.min.js'></script>
+      <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js'></script>
 <script src="js/wizard.js"></script>
 
 
