--- a/formulario.html
+++ b/formulario.html
@@ -21,16 +21,13 @@
 
   <form id="msform" class="row"> 
   <!-- progressbar -->
-  <ul id="progressbar">
-    <li class="active">Account Setup</li>
-    <li>Social Profiles</li>
-    <li>Personal Details</li>
-  </ul>
+
   <!-- fieldsets -->
     <div class="men">
       <div class="acti">
-         <h1>Haz un </h1><img src="img/logo.png">
+         <h1>Haz un </h1><img src="img/logo-formulario.png">
       </div>
+
     </div>
     <fieldset class="section-1">
       <div class="containers">
@@ -64,6 +61,7 @@
           <img src="img/svg-formulario/seccion-2.svg" class="img-fluid"> 
         </div>
         <div class="container-form">
+
           <div class="form-2 ">
             <p class="paso">Paso <span>2 de 17</span></p>
             <h2>Confirma tu dirección</h2>
@@ -87,7 +85,7 @@
     <fieldset id="section-3">
      <div class="containers">
         <div class="container-img">
-        <img src="img/svg-formulario/seccion-1.svg" class="img-fluid">
+        <img src="img/svg-formulario/seccion-3.svg" class="img-fluid">
         </div>
         <div class="container-form">
           <div class="form-3">
@@ -114,7 +112,7 @@
             <div class="containers">
 
               <div class="container-img">
-              <img src="img/svg-formulario/seccion-1.svg" class="img-fluid">
+              <img src="img/svg-formulario/seccion-4.svg" class="img-fluid">
               </div>
               <div class="container-form">
                 <div class="form-4">
@@ -648,8 +646,8 @@
 </form>
 </div>
 
-<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.min.js'></script>
-      <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.min.js'></script>
+      <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js'></script>
 <script src="js/wizard.js"></script>
 
 
