--- a/home.html
+++ b/home.html
@@ -92,8 +92,8 @@
 <section class="section1 mb-4 mt-5">
    <div class="container">
      <div class="row py-4">
-        <div class="col-12 text-center">
-            <img src="img/logo-body.png">
+        <div class="col-12 text-center py-2">
+            <img src="img/logo-header.png">
         </div> 
        <div class="col-lg-12 mt-2">
          <div class="row">
